# booklet

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.tex
.github/workflows/: build-nightly.yml  check-pr.yml  main.yml
compare/: readme  swerc_compare.sh
content/: basics.tex  bit-ops.tex  data-structures.tex  flows.tex  geometry.tex  graphs.tex  lp.tex  maths.tex  strings.tex  trees.tex
source/: HLD.cpp  HLD.h  Tree.cpp  Tree.h  articulation_points.cpp  articulation_points.h  bellman_ford.cpp  bellman_ford.h  bfs01.cpp  bfs01.h  bin_expo.cpp  bin_expo.h  bin_expoll.cpp  bin_expoll.h  binomial_coefficient.cpp  binomial_coefficient.h  bipartite_matching.cpp  bipartite_matching.h  bridges.cpp  bridges.h  catalan_number.cpp  catalan_number.h  centroid.cpp  centroid.h  chinese_remainder_theorem.cpp  chinese_remainder_theorem.h  circle_circle_intersec.h  circle_line_intersec.h  closest_pair_of_points.cpp  closest_pair_of_points.h  common.h  constants_geom.cpp  constants_geom.h  convex_hull.cpp  convex_hull.h  dijkstra.cpp  dijkstra.h  diophantine.cpp  diophantine.h  dnc_dp_optimization.cpp  (+115 more)
source/stresstest/: compare.sh
tests/: CMakeLists.txt  test_fenwick.cpp  test_mod_inverse.cpp
tests/stresstest/example/: a.cpp  validator.cpp
tests/stresstest/example_compare/: sol1.cpp  sol2.cpp
utils/: gen_snippet.py
validate/: readme  swerc_validate.sh
validate/example/: generator.cpp
